# bug-free-octo-happiness

./: .gitignore  README.md  docker-compose.yaml
rpiserver/: Dockerfile  pyproject.toml
rpiserver/rpiserver/: .server.py.swp  server.py
